----------------------------------------------------------------------
 OmegaT 2.0.0 update 2 Changes
----------------------------------------------------------------------
2.0.0 update 2 vs. 2.0.0 update 1

  1 Enhancement
  1 Bugfix

----------------------------------------------------------------------
2.0.0 update 2
  
  Other enhancements:
  
  - Console mode, to be able to run OmegaT without user interface

  Bug Fixes: 

  - Fix for detection of printf-variables with index specifier
  (for feature http://sourceforge.net/support/tracker.php?aid=2371713)

----------------------------------------------------------------------
 OmegaT 2.0.0 update 1 Changes
----------------------------------------------------------------------
2.0.0 update 1 vs. 2.0.0

  7 Enhancements
  1 Bugfix

----------------------------------------------------------------------
2.0.0 update 1

  Implemented requests:
  - Extra checks in TagValidator for PO linefeed
  http://sourceforge.net/support/tracker.php?aid=2371683
  
  - Extra check in TagValidator if printf variables in PO-file segments are correct
  http://sourceforge.net/support/tracker.php?aid=2371713
  
  - New English segmentation exceptions
  http://sourceforge.net/support/tracker.php?aid=1974262 

  - Fuzzy Glossary Matching
  http://sourceforge.net/support/tracker.php?aid=1374596  
  (Requires tokenizers from http://sourceforge.net/projects/omegat-plugins)

  - Catalan and Spanish segmentation rules
  http://sourceforge.net/support/tracker.php?aid=2282491   

  Other enhancements:

  - The instant start is displayed correctly (right aligned) for RTL languages

  - OmegaT can use tokenizers to get stemming in fuzzy and glossary matches. 
  (Requires tokenizers from http://sourceforge.net/projects/omegat-plugins)

  - Japanese localisation updated to 2.0 (UI)
  - Basque localisation updated to 2.0 (UI)
  - Slovenian localisation updated to 2.0 (UI)
  
  Bugs fixes:
    